infrastructure/opa-plugin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opa-plugin
spec: 
  ports:
  - name: http
    port: 9191
    protocol: TCP
    targetPort: 9191
