infrastructure/opa-plugin/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opa-plugin
spec:
  parentRefs:
    - name: wac-hospital-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /opa
      backendRefs:
        - group: ""
          kind: Service
          name: opa-plugin
          port: 80
